--- a/src/style.css
+++ b/src/style.css
@@ -90,7 +90,7 @@ button:active {
 }
 
 #chat {
-  width: 75%;
+  width: 85%;
   height: 100%;
   background-color: black;
   color: white;
@@ -98,13 +98,6 @@ button:active {
   display: inline-block;
   text-align: left;
   padding-left: 10px;
-}
-
-#map {
-  width: 25%;
-  height: 100%;
-  background-color:gray;
-  color: white;
 }
 
 #controls {
@@ -120,13 +113,13 @@ button:active {
 }
 
 #userList {
-  width: 25%;
+  width: 15%;
   height: 100%;
   background-color: #1a1a1a;
   color: white;
   overflow-y: scroll;
   display: inline-block;
-  text-align: left;
+  text-align: center;
   padding-left: 10px;
 }
 
