--- a/src/style.css
+++ b/src/style.css
@@ -128,6 +128,12 @@ button:active {
   height: 2em;
 }
 
+.top-bar{
+  display: flex;
+  justify-content: flex-end;
+  padding : 12px 16px
+}
+
 .overlay {
     background-color: rgba(200,200,200,.75);
 }
