--- a/src/style.css
+++ b/src/style.css
@@ -22,12 +22,17 @@ a:hover {
   color: #535bf2;
 }
 
+html, body {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
   /* min-width: 320px; */
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  min-height: 0
 }
 
 h1 {
@@ -80,11 +85,15 @@ button:active {
     background-color: #f9f9f9;
   }
 }
+#logout{
+  height: 3em;
+  justify-self: flex-end;
+}
 
 #container {
   display: flex;
   /* width: 100%; */
-  height: 50vw;
+  height: calc(100vh - 6.5em - 48px);
   margin: 0 auto;
   border: 2px solid white;
 }
@@ -102,39 +111,85 @@ button:active {
 #controls {
   display: flex;
   align-items: center;
-  width:100%
+  width:100%;
+  padding : 12px 16px
 }
 
 #inputText {
-  width: 75%;
+  width: 80%;
   height: 2em;
   text-align: center;
 }
 
 #userList {
-  width: 15%;
+  width: 20%;
   height: 100%;
   background-color: #1a1a1a;
   color: white;
   overflow-y: scroll;
   display: inline-block;
   text-align: center;
-  padding-left: 10px;
+  padding: auto;
+}
+
+#userList .me{
+  color:deeppink;
+}
+
+#userList .online::before{
+  content: "● ";
+  color: limegreen;
+}
+
+#userList .reconnecting::before{
+  content: "○ ";
+  color:coral;
+}
+
+#userList .offline{
+  color:lightgray;
+}
+
+#userList .offline::before{
+  content: "● ";
+  color:lightgray;
+}
+
+#playersCount{
+  font-weight: bold;
 }
 
 #sendButton {
-  width: 25%;
+  width: 15%;
   height: 2em;
+  margin: auto 3%;
+  padding: 0%
+}
+
+#chat, #userList{
+  height: 100%;
+  overflow-y: auto;
+}
+
+#lobbyName {
+  font-weight: bold;
+  font-size: larger;
+  color: black;
 }
 
 .top-bar{
-  display: flex;
-  justify-content: flex-end;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
   padding : 12px 16px
 }
 
 .overlay {
     background-color: rgba(200,200,200,.75);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .clickable {
